@@ -184,6 +184,9 @@ Unreleased changes (1.0-dev)
 
 63. NUTCH-534 - SegmentMerger: add -normalize option (Emmanuel Joke via ab)
 
+64. NUTCH-528 - CrawlDbReader: add some new stats + dump into a CSV format
+    (Emmanuel Joke via ab)
+
 
 Release 0.9 - 2007-04-02
 
